# Cmake

./: README.md
opencv/: CMakeLists.txt
qt/: CMakeLists.txt
